# pyfirst

./: addex.py  biner.txt  fileemployee - Copy.txt  fileemployee.csv  fileemployee.txt  jso.json  main.py  names.csv  pyproject.toml  quotes.json  schemas.py  sort.py
aiohttpw5/: main.py
clean_folder/: README.md  add.py  pyproject.toml
clean_folder/TSParser/: config.ini  start
clean_folder/src/clean_folder/: sort.py
clean_folder/src/clean_folder_wexist2003.egg-info/: PKG-INFO  SOURCES.txt
data/: logs.txt  session.session  Запуск.lnk  Установка.lnk
ex-09/: connect_db.py  main.py  models.py  mynotes.db  pyproject.toml  seeds.py
ex-09/alembic/: env.py
ex-09/alembic/versions/: 7750e0247fe8_init.py
ex082/: pyproject.toml
ex082/ex08/: privat.json  pyproject.toml
ex082/ex08/odm_mongoengine/: create.py  delete.py  models.py  read.py  update.py
ex082/ex08/pymongo_example/: connect.py  start_main.py
ex082/hw08_1/: main.py  models.py
ex082/hw08_2/: models.py
ex082/pub-sub/: consumer.py  producer.py
ex082/redis_example/: app.py  cache.py  main.py
ex082/simple/: consumer.py  producer.py
ex082/tasks/: producer.py  pyproject.toml
fastApi/: main.py  models.py  schemas.py  sql_app.db
folder_venv/: pyvenv.cfg
folder_venv/Scripts/: activate  activate.bat
front-init/: main copy.py  main web.py  main.py  main_client.py  main_server.py  main_thread_echo.py
front-init/storage/: data.json
hw071/: config.ini  my_select.py  pyproject.toml  seed.py
hw071/migrations/: env.py
hw071/migrations/versions/: f32fc349d6bd_init.py
hw071/src/: db.py  models.py
hw08_2/: consumer.py  producer.py
hw_killer_instagram/app_instagram/: forms.py  views.py
hw_killer_instagram/users/: urls.py
killer_instagram/app_instagram/: forms.py  models.py  urls.py  views.py
killer_instagram/killer_instagram/: settings.py  urls.py
killer_instagram/users/: forms.py  views.py
m07/: config.ini  core_example.py  main.py  pyproject.toml  rel_one_to_many.py
m07/database/: models.py  repository.py
m07_core_alembic/: config.ini  contacts.py  main.py  main_core.py  pyproject.toml  rel.py  rel_read.py  sessions.py  signup.py  students.py  teachers.py
m07_core_alembic/migrations/: env.py
m07_core_alembic/src/: db.py  models.py  repository.py
m07_todo/database/: db.py
migrations/versions/: 3c45cd3c0d20_init.py  dfe8daccfe2f_init.py  (+1 more)
mypwm2env/: Bot.py  Dockerfile  logs.txt  pyproject.toml
own_project/: check_homework.py  main.py  test.py  try.py
pwm3/: numsortm3.py  sorterm3.py
src/: schemas.py
static/: cover.css
templates/: index.html
ventest/: pyvenv.cfg
wm6_2/: change_to_table.py  create_table.py  db_connection.py  random_fake.py  select_to_table.py  update_table.py
wm6hw/: create_tables.sql  hw.db  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_add_01.sql  query_add_02.sql  seeds.py
wpy6sql/: dbsql  insert_data.sql  main.py
(+26 files in other folders)
