[tool.poetry]
name = "ex-09"
version = "0.1.0"
description = ""
authors = ["wexist2003 <neoscerberis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
