[tool.poetry]
name = "pyfirst"
version = "0.1.0"
description = ""
authors = ["wexist2003 <neoscerberis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pika = "^1.3.2"
redis = "^5.0.1"
redis-lru = "^0.1.2"
celery = "^5.3.6"
pymongo = {extras = ["srv"], version = "^4.6.1"}
mongoengine = "^0.27.0"
pika = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
