[tool.poetry]
name = "hw071"
version = "0.1.0"
description = ""
authors = ["wexist2003 <neoscerberis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^23.0.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
