[tool.poetry]
name = "m07"
version = "0.1.0"
description = ""
authors = ["wexist2003 <neoscerberis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
