[tool.poetry]
name = "pyfirst"
version = "0.1.0"
description = ""
authors = ["wexist2003 <neoscerberis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
